# apex-disk

./: .coderabbit.yaml  .gitignore  .oxfmtrc.jsonc  .oxlintrc.json  AGENTS.md  COMPATIBILITY.md  FAQs.md  LICENSE  LICENSE.md  LOGGING.md  README.md  RELEASES.md  RELEASES_BETA.md  RELEASES_NIGHTLY.md  SECURITY.md  UPDATES.md  UPDATING.md  index.html  oxlint-plugins.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rustfmt.toml  tsconfig.json  vite.config.ts
.claude/: settings.json
.claude/commands/: beta-notes.md  compatibility-check.md  force-sync.md  nightly-notes.md  release-from-notes.md  release.md  sync.md
.claude/hooks/: pre-commit-gate.sh
.claude/rules/: agent-commit-protocol.md  pre-commit-protocol.md  reference-loader.md
.cursor/: hooks.json
.cursor/commands/: beta-notes.md  compatibility-check.md  force-sync.md  release-from-notes.md  release.md  sync.md
.cursor/rules/: agent-commit-protocol.mdc  pre-commit-protocol.mdc  reference-loader.mdc
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: beta.yml  nightly.yml  release.yml  tests.yml
docs/: ARCHITECTURE.md  COMPATIBILITY.md  RELEASES.md  UPDATES.md
e2e/: README.md  tsconfig.json  wdio.conf.ts
e2e/helpers/: navigation.ts
e2e/specs/: app-navigation.spec.ts  dummy.spec.ts  scan-flow.spec.ts  selection-checkbox.spec.ts  settings-flow.spec.ts  trash-review.spec.ts
marketing/: faq.md
reference/: agent-workflow.md  app-shell.md  architecture.md  code-style.md  compatibility.md  e2e.md  index.md  logging.md  protected-files.md  releases.md  scan-trash-flow.md  scanning.md  state-lifecycle.md  tauri-commands.md  testing.md  themes.md  translations.md  updates.md  voice.md
releases/: README.md  RELEASES.md
scripts/: add-license-headers.sh  codesign.sh  load-env.sh  run-with-debug.sh  verify-no-e2e-symbols.sh
src/: App.vue  index.html  main.ts  vite-env.d.ts
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  README.md  tauri.beta.conf.json  tauri.conf.dev.json  tauri.conf.json  tauri.dev.conf.json  tauri.nightly.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: constants.rs  delete.rs  disk.rs  e2e_fixtures.rs  lib.rs  locale.rs  log.rs  main.rs  menu.rs  menu_translations.rs  native_dialog.rs  permissions.rs  safe_folders.rs  scan.rs  store.rs  system_info.rs  trash.rs  updater.rs  xattr.rs
src-tauri/tests/: delete_test.rs  disk_test.rs  menu_translations_test.rs  safe_folders_test.rs  scaling_probe.rs  scan_test.rs  store_test.rs  system_info_test.rs  trash_test.rs  xattr_test.rs
src-tauri/tests/support/: mod.rs
src/assets/css/: animations.css  classes.css  global.css  reset.css  rtl.css  theme.css
src/assets/translations/: App.ts  AppFooter.ts  AppFooter.yaml  AppHeader.ts  AppLayout.ts  DiskUsageProgress.ts  FooterMenu.ts  FooterNav.ts  Header.ts  InformationFooter.ts  InformationFooter.yaml  InformationView.ts  InformationView.yaml  Layout.ts  ListItem.ts  MainView.ts  ScanLaunch.ts  ScanLaunch.yaml  ScanLoadingView.ts  ScanProgress.ts  ScanProgress.yaml  ScanResults.ts  ScanResultsDelete.ts  ScanResultsDeleteComplete.ts  ScanResultsDeleteConfirmation.ts  ScanResultsDeleteList.ts  ScanResultsList.ts  ScanResultsList.yaml  ScanResultsListItem.ts  ScanResultsListItem.yaml  ScanResultsLoadingView.ts  ScanResultsTrashConfirmation.ts  ScanResultsTrashList.ts  ScanScanning.ts  ScanScanningResults.ts  ScanSplashScreen.ts  ScanTrashConfirmation.ts  ScanTrashConfirmation.yaml  ScanTrashList.ts  ScanTrashList.yaml  (+9 more)
src/components/: AnimatedCheckCircle.vue  App.vue  AppFooter.vue  AppHeader.vue  AppLayout.vue  AppLoadingScreen.vue  AppShell.vue  AppViewAnnouncer.vue  DiskUsageProgress.vue  FolderNode.vue  FooterMenu.vue  FooterNav.vue  Header.vue  InformationFooter.vue  InformationView.vue  Layout.vue  ListItem.vue  Logo.vue  MainView.vue  ScanLaunch.vue  ScanListNav.vue  ScanLoadingView.vue  ScanProgress.vue  ScanResults.vue  ScanResultsDelete.vue  ScanResultsDeleteComplete.vue  ScanResultsDeleteConfirmation.vue  ScanResultsDeleteItem.vue  ScanResultsDeleteList.vue  ScanResultsDeleteListItem.vue  ScanResultsList.vue  ScanResultsListItem.vue  ScanResultsListItemIconSwitch.vue  ScanResultsLoadingView.vue  ScanResultsNav.vue  ScanResultsTrashConfirmation.vue  ScanResultsTrashList.vue  ScanResultsTrashListItem.vue  ScanScanning.vue  ScanScanningResults.vue  (+11 more)
src/components/ui/: AnimatedAlertCircle.vue  AnimatedCheckCircle.vue  CheckboxIcon.vue  FilledCheckCircleIcon.vue  Logo.vue  SelectionIcon.vue  Spinner.vue
src/lib/: constants.ts  disk.ts  document.ts  dom.ts  format.ts  log.ts  popover-utils.ts  provide-settings-store.ts  settings.ts  systemDefaults.ts  theme.ts  use-app-update.ts  use-app-updater.ts  use-app-views.ts  use-context-menu.ts  use-disk-usage.ts  use-focus-ring.ts  use-full-disk-access.ts  use-label-popover.ts  use-list-row-popovers.ts  use-reduced-motion.ts  use-scan.ts  use-scanner.ts  use-scrollbar-visibility.ts  use-system-info.ts  use-system.ts  use-translations.ts  use-updater.ts  use-view-transition.ts  use-views.ts  useNamePopover.ts  useReducedMotion.ts  useScan.ts  useTranslations.ts  useUpdater.ts  useViewTransition.ts  useViews.ts  utils.ts
src/stores/: app-settings.ts  settings.ts
src/types/: disk.ts  settings.ts  structs.ts  structures.ts  system-info.ts
tests/: index.js  smoke.js
