[package]
name = "apex-disk"
version = "0.0.11"
description = "Tool to easily identify and get rid of big, unused files and folders in seconds."
authors = ["smastrom"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "apex_disk_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["image-png"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-os = "2"
tauri-plugin-store = "2"
tauri-plugin-updater = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
dirs = "5.0"
nix = { version = "0.29", features = ["fs"] }
open = "5"
rayon = "1.10"
trash = "5"
libc = "0.2"
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = [
   "NSString",
   "NSData",
   "NSArray",
   "NSUserDefaults",
   "NSURL",
   "NSDictionary",
   "NSError",
   "NSValue",
] }
objc2-app-kit = { version = "0.3", features = ["NSAlert", "NSImage", "NSButton"] }
tauri-plugin-webdriver = { version = "0.2", optional = true }
tempfile = { version = "3", optional = true }
sys-locale = "0.1"

[features]
default = []
e2e = ["tauri-plugin-webdriver", "dep:tempfile"]

[dev-dependencies]
tauri = { version = "2", features = ["test"] }
tempfile = "3"
